scrollbar fixes and added toast for add notes

--- a/src/features/GroupSection/group-column.module.scss
+++ b/src/features/GroupSection/group-column.module.scss
@@ -15,8 +15,8 @@
 
 .group_list {
   width: 100%;
-  overflow-x: hidden;
   height: 100%;
+  scrollbar-gutter: auto;
 }
 
 .plus_button {
