--- a/src/features/NotesSection/note-section.module.scss
+++ b/src/features/NotesSection/note-section.module.scss
@@ -60,4 +60,5 @@
 .notes_container {
   padding: 2.4rem 4rem;
   gap: 2rem;
+  scrollbar-gutter: stable;
 }
