--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -179,7 +179,6 @@ h6,
 
 .styled_scrollbar {
   overflow-y: hidden;
-  scrollbar-gutter: stable;
 }
 
 .styled_scrollbar:hover,
